athene: overlay: Use tether automatic upstream selection
(config_tether_upstream_automatic=true)

Test: as follows
    - built, flashed, booted
Bug: 32163131
Bug: 62648872
Bug: 63282480
Bug: 110118584
Bug: 110260419

Change-Id: I604cda53d6d37a33de3e3ccc65c0da781d21278b

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -369,4 +369,9 @@
 
      <!-- Enable doze powersaving mode -->
     <bool name="config_enableAutoPowerModes">true</bool>
+
+    <!-- When true, the tethering upstream network follows the current default
+         Internet network (except when the current default network is mobile,
+         in which case a DUN network will be used if required). -->
+    <bool translatable="false" name="config_tether_upstream_automatic">true</bool>
 </resources>
