--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -351,13 +351,13 @@
    <!-- Default list of files to pin via Pinner Service -->
    <string-array translatable="false" name="config_defaultPinnerServiceFiles">
        <item>"/system/framework/arm64/boot-framework.oat"</item>
-       <item>"/system/framework/arm64/boot-framework.vdex"</item>
+       <item>"/system/framework/boot-framework.vdex"</item>
        <item>"/system/framework/oat/arm64/services.odex"</item>
        <item>"/system/framework/oat/arm64/services.vdex"</item>
        <item>"/system/framework/arm64/boot.oat"</item>
-       <item>"/system/framework/arm64/boot.vdex"</item>
+       <item>"/system/framework/boot.vdex"</item>
        <item>"/system/framework/arm64/boot-core-libart.oat"</item>
-       <item>"/system/framework/arm64/boot-core-libart.vdex"</item>
+       <item>"/system/framework/boot-core-libart.vdex"</item>
    </string-array>
 
     <!-- Is the notification LED intrusive? Used to decide if there should be a disable option -->
