athene: overlay: Enable doze power saving mode
* This is set to false by default and needs to be turned on per device
  depending if the device supports SENSOR_TYPE_SIGNIFICANT_MOTION

More info here: https://source.android.com/devices/tech/power/mgmt.html

Change-Id: I4c5376dea0e80cb46c8dcdde0a5c573bc8440017

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -367,4 +367,6 @@
          and one pSIM) -->
     <integer name="config_num_physical_slots">2</integer>
 
+     <!-- Enable doze powersaving mode -->
+    <bool name="config_enableAutoPowerModes">true</bool>
 </resources>
