athene: Enable the Pinner Service
* Pin key files into memory to prevent having to fetch from flash
  after boot. Improves system performance by preventing page cache
  thrash. Retrieves files from a device-specific overlay to allow
  specialization.

Change-Id: I53f8227c66c44d3955422b41d623e450ec2be421

Signed-off-by: Rajat Gupta <rajatgupta1998@acm.org>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -350,5 +350,13 @@
 
     <!-- Is the notification LED intrusive? Used to decide if there should be a disable option -->
     <bool name="config_intrusiveNotificationLed">true</bool>
-    
+
+    <!-- Default list of files pinned by the Pinner Service -->
+    <string-array translatable="false" name="config_defaultPinnerServiceFiles">
+        <item>"/system/framework/arm/boot-framework.oat"</item>
+        <item>"/system/framework/oat/arm/services.odex"</item>
+        <item>"/system/framework/arm/boot.oat"</item>
+        <item>"/system/framework/arm/boot-core-libart.oat"</item>
+    </string-array>
+
 </resources>
